--- a/src/StocksNow/styles/components/_main.scss
+++ b/src/StocksNow/styles/components/_main.scss
@@ -33,4 +33,43 @@
                 
                 &:focus {
                     background: $black700;
-                    bord
+                    border: 1px solid $black800;
+                    outline: none;
+                    transition: .4s;
+                }
+            }
+        }
+    }
+
+    .main-aside {
+        flex: 1;
+    }
+}
+
+.stockChart-wrapp {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .chart-nav {
+        height: 8vh;
+        width: 92%;
+        margin: 0 auto;
+
+        ul {
+            height: 100%;
+            width: 100%;
+            list-style: none;
+            display: flex;
+
+            li {
+                flex: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                div {
+                    height: 55%;
+                    width: 70%;
+              
