--- a/src/StocksNow/styles/components/_main.scss
+++ b/src/StocksNow/styles/components/_main.scss
@@ -103,4 +103,7 @@
         width: 100%;
         // background: red;
         display: flex;
-        j
+        justify-content: center;
+        align-items: center;
+    }
+}
