--- a/src/StocksNow/styles/components/app.css
+++ b/src/StocksNow/styles/components/app.css
@@ -232,3 +232,354 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-title-wrapp {
+  height: 70%;
+  width: 100%;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-title-wrapp .stockNews-title {
+  font-size: 18px;
+  padding-left: 15px;
+  padding-top: 15px;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-publisher-wrapp {
+  height: 30%;
+  width: 100%;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-publisher-wrapp .stockNews-publisher {
+  font-size: 12px;
+  padding-left: 15px;
+  padding-top: 15px;
+}
+
+.main-aside .main-aside-cards-footer-wrapp {
+  width: 100%;
+  height: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-aside .main-aside-cards-footer-wrapp p {
+  display: none;
+  font-weight: bold;
+  font-size: 20px;
+  color: #A0AEC0;
+}
+
+.main-aside .main-aside-cards-list {
+  height: 60%;
+  width: 100%;
+  min-width: 360px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 94%;
+  background: #0d1117;
+  min-height: 120px;
+  max-height: 150px;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div {
+  height: 100%;
+  width: 100%;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href {
+  height: 100%;
+  width: 100%;
+  display: block;
+  padding: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href:hover {
+  cursor: pointer;
+  background: #1A202C;
+  -webkit-transition: .4s background;
+  transition: .4s background;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .main-aside-card-title-wrapp {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .main-aside-card-title-wrapp .main-aside-card-title {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .main-aside-card-publisher-wrapp {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .main-aside-card-publisher-wrapp .main-aside-card-publisher {
+  font-size: 12px;
+  margin-bottom: 5px;
+  font-weight: 500;
+  font-family: 'Poppins', sans-serif;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:first-child {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  min-height: 70px;
+  max-height: 70px;
+  border-bottom: 1px solid #1A202C;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:first-child p {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  min-height: 60px;
+  max-height: 60px;
+  border-top: 1px solid #1A202C;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child a {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child a:hover {
+  background: #1A202C;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child a p {
+  font-weight: bold;
+  font-size: 18px;
+  color: #27ffbc;
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
+.main .main-content {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main .main-content .main-content-input-wrapp {
+  height: 12vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .main-content .main-content-input-wrapp input {
+  height: 50px;
+  width: 92%;
+  border-radius: 5px;
+  background: #0d1117;
+  border: none;
+  color: #fff;
+  padding: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  padding-left: 15px;
+  border: 1px solid #1A202C;
+}
+
+.main .main-content .main-content-input-wrapp input:focus {
+  background: #1A202C;
+  border: 1px solid #0d1117;
+  outline: none;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.main .main-aside {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.stockChart-wrapp {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.stockChart-wrapp .chart-nav {
+  height: 8vh;
+  width: 92%;
+  margin: 0 auto;
+}
+
+.stockChart-wrapp .chart-nav ul {
+  height: 100%;
+  width: 100%;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.stockChart-wrapp .chart-nav ul li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stockChart-wrapp .chart-nav ul li div {
+  height: 55%;
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #0d1117;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.stockChart-wrapp .chart-nav ul li div:hover {
+  background: #1A202C;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.stockChart-wrapp .chart-nav ul li div p {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.stockChart-wrapp .chart-nav ul li .active {
+  background: #27ffbc;
+}
+
+.stockChart-wrapp .chart-wrapp {
+  margin-bottom: 10vh;
+  height: 80%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-wrapp {
+  height: 100vh;
+  width: 100%;
+}
+
+.content-wrapp .content {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+/*# sourceMappingURL=app.css.map */
