Updated submodule lib/InfinityLib

--- a/src/StocksNow/styles/config/_colors.scss
+++ b/src/StocksNow/styles/config/_colors.scss
@@ -34,3 +34,35 @@ $green900: #1C4532;
 
 //* Blue
 $blue100: #BEE3F8;
+$blue200: #90CDF4;
+$blue300: #63B3ED;
+$blue400: #4299E1;
+$blue500: #3182CE;
+$blue600: #2B6CB0;
+$blue700: #2C5282;
+$blue800: #2A4365;
+$blue900: #1A365D;
+
+//* Purple
+$purple100: #E9D8FD;
+$purple200: #D6BCFA;
+$purple300: #B794F4;
+$purple400: #9F7AEA;
+$purple500: #805AD5;
+$purple600: #6B46C1;
+$purple700: #553C9A;
+$purple800: #44337A;
+$purple900: #322659;
+
+//* Pink
+$pink100: #FED7E2;
+$pink200: #FBB6CE;
+$pink300: #F687B3;
+$pink400: #ED64A6;
+$pink500: #D53F8C;
+$pink600: #B83280;
+$pink700: #97266D;
+$pink800: #702459;
+$pink900: #521B41;
+
+$cta: #27ffbc;
