--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -18,4 +18,46 @@ p, a, div, h2, h3, h4, h5, h6 {
 }
 
 h1, #logo {
-  font-family: 'Poppins', san
+  font-family: 'Poppins', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.header {
+  height: 7vh;
+  min-height: 60px;
+  background: #1A202C;
+  width: 100%;
+  -webkit-box-shadow: 3px 1px 3px #000;
+          box-shadow: 3px 1px 3px #000;
+}
+
+.header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header nav .logo-wrapp #logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #1A365D;
+}
+
+.sidebar {
+  height: 100%;
+  width: 400px;
+  border-right: 1px solid #0d1117;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-o
