--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -60,4 +60,34 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-o
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.sidebar .sidebar-heading-wrapp {
+  height: 12%;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sidebar .sidebar-heading-wrapp .sidebar-heading {
+  font-size: 28px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  color: #27ffbc;
+  padding-left: 15px;
+  background: -webkit-linear-gradient(30deg, #27ffbc, #63B3ED);
+  -webkit-background-cli
