--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -90,4 +90,39 @@ a {
   color: #27ffbc;
   padding-left: 15px;
   background: -webkit-linear-gradient(30deg, #27ffbc, #63B3ED);
-  -webkit-background-cli
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.sidebar .sidebar-list-wrapp {
+  height: 48%;
+  width: 90%;
+}
+
+.sidebar .sidebar-list-wrapp ul {
+  height: 100%;
+  width: 100%;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.sidebar .sidebar-list-wrapp ul li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sidebar .sidebar-list-wrapp ul li div {
+  display: -webkit
