--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -163,4 +163,37 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: 
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-left: 1px solid #0d1117;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp {
+  height: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card {
+  height: 80%;
+  width: 94%;
+  background: #0d1117;
+  border-radius: 10px;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card:hover {
+  cursor: pointer;
+  opacity: .4;
+  background: #1A202C;
+  -webkit-transition: .4s background;
+  transi
