--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -196,4 +196,32 @@ a {
   opacity: .4;
   background: #1A202C;
   -webkit-transition: .4s background;
-  transi
+  transition: .4s background;
+  -webkit-transform: scale(98%);
+          transform: scale(98%);
+  -webkit-transition: .3s transform;
+  transition: .3s transform;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews-headline-wrapp {
+  height: 25%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box
