--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -224,4 +224,32 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #1A202C;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews-headline-wrapp p {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews {
+  height: 75%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-title-wrapp {
+  height: 70%;
+  width: 100%;
+}
+
+.main-aside .main-aside-cards-stockNews-wrapp .stockNews-card a .stockNews .stockNews-title
