--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -321,4 +321,31 @@ a {
   width: 100%;
 }
 
-.main-aside .main-aside-cards-list 
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href {
+  height: 100%;
+  width: 100%;
+  display: block;
+  padding: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href:hover {
+  cursor: pointer;
+  background: #1A202C;
+  -webkit-transition: .4s background;
+  transition: .4s background;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .main-aside-card-title-wrapp {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card div .main-aside-card-href .
