--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -373,4 +373,34 @@ a {
 }
 
 .main-aside .main-aside-cards-list .main-aside-card:first-child {
-  border-top-left-r
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  min-height: 70px;
+  max-height: 70px;
+  border-bottom: 1px solid #1A202C;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:first-child p {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  min-height: 60px;
+  max-height: 60px;
+  border-top: 1px solid #1A202C;
+}
+
+.main-aside .main-aside-cards-list .main-aside-card:last-child a {
+  height: 
