--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -436,4 +436,41 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  wid
+  width: 100%;
+}
+
+.main .main-content {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main .main-content .main-content-input-wrapp {
+  height: 12vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .main-content .main-content-input-wrapp input {
+  height: 50px;
+  width: 92%;
+  border-radius: 5px;
+  background: #0d1117;
+  border: none;
+  color: #fff;
+  paddi
