--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -516,4 +516,38 @@ a {
   height: 100%;
   width: 100%;
   list-style: none;
-  display: -we
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.stockChart-wrapp .chart-nav ul li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stockChart-wrapp .chart-nav ul li div {
+  height: 55%;
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #0d1117;
+  border-radius: 25px;
+  cur
