--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -550,4 +550,46 @@ a {
           justify-content: center;
   background: #0d1117;
   border-radius: 25px;
-  cur
+  cursor: pointer;
+}
+
+.stockChart-wrapp .chart-nav ul li div:hover {
+  background: #1A202C;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.stockChart-wrapp .chart-nav ul li div p {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.stockChart-wrapp .chart-nav ul li .active {
+  background: #27ffbc;
+}
+
+.stockChart-wrapp .chart-wrapp {
+  margin-bottom: 10vh;
+  height: 80%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-wrapp {
+  height: 100vh;
+  width: 100%;
+}
+
+.content-wrapp .content {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  displ
