--- a/src/StocksNow/styles/index.css
+++ b/src/StocksNow/styles/index.css
@@ -592,4 +592,27 @@ a {
   height: 100%;
   width: 100%;
   display: -webkit-box;
-  displ
+  display: -ms-flexbox;
+  display: flex;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.app {
+  background: #000000;
+  color: #E2E8F0;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.container {
+  width: 94%;
+  height: 100%;
+  margin: 0 auto;
+}
+/*# sourceMappingURL=index.css.map */
